fix validation and presenter

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -241,6 +241,7 @@
 								При получении
 							</button>
 						</div>
+						<span class="form__error error-payment"></span>
 					</div>
 					<label class="order__field">
 						<span class="form__label modal__title">Адрес доставки</span>
@@ -250,6 +251,7 @@
 							type="text"
 							placeholder="Введите адрес"
 						/>
+						<span class="form__error error-address"></span>
 					</label>
 				</div>
 				<div class="modal__actions">
@@ -272,6 +274,7 @@
 							type="text"
 							placeholder="Введите Email"
 						/>
+						<span class="form__error error-email"></span>
 					</label>
 					<label class="order__field">
 						<span class="form__label modal__title">Телефон</span>
@@ -281,6 +284,7 @@
 							type="text"
 							placeholder="+7 ("
 						/>
+						<span class="form__error error-phone"></span>
 					</label>
 				</div>
 				<div class="modal__actions">
